--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CW9X808DYS"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-  gtag('config', 'G-CW9X808DYS');
-  </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -57,7 +49,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Saswat_New_CV.pdf')"
+            onclick="window.open('./assets/Saswat_Parija_CV.pdf')"
           >
             Download CV
           </button>
@@ -115,7 +107,7 @@
           </div>
           <div class="text-container">
             <p>
-              Hi,I am Saswat, a 4th year integrated M.Sc. Student at School of Chemical Science, NISER.
+              Hi,I am Saswat, a 5th year integrated M.Sc. Student at School of Chemical Science, NISER.
               I am enthusiastic about advancing my academic and research pursuits through a graduate program, with a particular focus on porphyrin-type molecules. 
               My academic journey has equipped me with a robust foundation in theoretical and practical aspects of chemistry, and my research experience has instilled in me a passion for delving into the intricacies of molecular structures.
               Working extensively on porphyrin-type molecules during my undergraduate and postgraduate studies has fueled my interest in their diverse applications, ranging from catalysis to bioimaging.             
@@ -146,7 +138,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>NMR Spectroscopy</h3>
+                  <h3>NMR & EPR Spectroscopy</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -168,7 +160,18 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Fluoroscence spectroscopy</h3>
+                  <h3>FTIR spectroscopy</h3>
+                  <p>Experienced</p>  
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Fluorescence spectroscopy</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -226,13 +229,33 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+              src="./assets/project-2.png"
+              alt="Project 1"
+              class="project-img"
+            />
+          </div>
+          <h2 class="experience-sub-title project-title">Summer Project 2023</h2>            
+            <p> Synthesis and characterization of Light triggered chiral switch.
+            </p>
+          <div class="btn-container">
+            <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://saswat-parija.github.io/uc/'"
+            >
+              Know More
+            </button>
+          </div>
+        </div>
+        <div class="details-container color-container">
+          <div class="article-container">    
+              <img
+                src="./assets/project-3.png"
                 alt="Project 2"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Summer Project 2023</h2>             
-               <p> Synthesis and characterization of Light triggered chiral switch.
+            <h2 class="experience-sub-title project-title">Summer Project 2024</h2>             
+               <p> Synthesis of Luminescent Cd(ii)Re(v) coordination MOF.
                </p>
               <div class="btn-container">
               <button
@@ -247,7 +270,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/project-4.png"
                 alt="Project 3"
                 class="project-img"
               />
