--- a/index.html
+++ b/index.html
@@ -107,11 +107,8 @@
           </div>
           <div class="text-container">
             <p>
-              Hi,I am Saswat, a 5th year integrated M.Sc. Student at School of Chemical Science, NISER.
-              I am enthusiastic about advancing my academic and research pursuits through a graduate program, with a particular focus on porphyrin-type molecules. 
-              My academic journey has equipped me with a robust foundation in theoretical and practical aspects of chemistry, and my research experience has instilled in me a passion for delving into the intricacies of molecular structures.
-              Working extensively on porphyrin-type molecules during my undergraduate and postgraduate studies has fueled my interest in their diverse applications, ranging from catalysis to bioimaging.             
-              I am confident that my academic background, research experience, and passion for porphyrin chemistry make me a suitable candidate for your program. I look forward to the opportunity to contribute meaningfully to the ongoing research at your institution and contribute to the broader scientific community.
+              Hi, I am Saswat, a 5th-year integrated M.Sc. Student at School of Chemical Science, NISER. I am enthusiastic about advancing my academic and research pursuits through a graduate program focusing on porphyrin-type molecules. My educational journey has equipped me with a robust foundation in theoretical and practical aspects of chemistry, and my research experience has instilled in me a passion for delving into the intricacies of molecular structures. Working extensively on porphyrin-type molecules during my undergraduate and postgraduate studies has fueled my interest in their diverse applications, ranging from catalysis to bioimaging. My academic background, research experience, and passion for porphyrin chemistry make me a suitable candidate for your program.
+I look forward to contributing meaningfully to your institution's ongoing research and the broader scientific community.
             </p>
           </div>
         </div>
