--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CW9X808DYS"></script>
-  <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="19127763-e8e3-4c9b-b9d4-112f305ea108" type="text/javascript" async></script>
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-CW9X808DYS"></script>
+   <script>
+   window.dataLayer = window.dataLayer || [];
+   function gtag(){dataLayer.push(arguments);}
+   gtag('js', new Date());
 
-  gtag('config', 'G-CW9X808DYS');
+   gtag('config', 'G-CW9X808DYS');
 </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
