--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Saswat_Parija_CV.pdf')"
+            onclick="window.open('./assets/Saswat_New_CV.pdf')"
           >
             Download CV
           </button>
